--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
+    "@radix-ui/react-tooltip": "^1.1.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.5.0",
     "lucide-react": "^0.479.0",
     "lz-string": "^1.5.0",
     "next-themes": "^0.4.6",
